--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 
 .App {
-  text-align: center;
-  background-image: './cool-background.png';
-  background-color: #61dafb;
+  /* text-align: center; */
+  /* background-image: './cool-background.png';
+  background-color: #61dafb; */
+  background-color: "#fafafa";
 }
+/* body{
+  background-color: #fafafa;
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -38,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
